fix spacing

--- a/css/azlyrics.css
+++ b/css/azlyrics.css
@@ -133,7 +133,6 @@ a {
 	width: 46em;
 	padding: 0 4em;
 	margin-top: 2em;
-
 }
 
 /* Style */
@@ -179,6 +178,8 @@ a {
 	display: flex;
 	flex-direction: row;
 	justify-content: left;
+	padding-bottom: 2em;
+	border-bottom: solid .0625em #49DEB7;
 }
 .color {
 	display: flex;
@@ -240,7 +241,7 @@ a {
 	width: 54em;
 }
 .feature img {
-	width: 34em;
+	width: 29em;
 }
 #design .content > div {
 	display: flex;
@@ -255,22 +256,67 @@ a {
 .feature .text {
 	display: flex;
 	flex-direction: column;
+	align-items: left;
+	justify-content: center;
+}
+.feature h3 {
+	margin-bottom: 1em;
+}
+#homepage .image, #artist .image {
+	margin-right: 3em;
+}
+#lyrics .image {
+	margin-left: 3em;
+}
+
+/* Thanks */
+
+#thanks {
+	margin-bottom: 0;
+}
+#thanks .content {
+	width: 45em;
+	padding: 2em 4.5em;
+	border-bottom: solid .0625em #49DEB7;
+	display: flex;
+	flex-direction: column;
 	align-items: center;
+}
+#thanks h3 {
+	width: 14.5em;
+	margin-bottom: 1em;
+	text-align: left;
+}
+#thanks a {
+	width: 18em;
+	text-align: left;
+	display: flex;
+	flex-direction: row;
+}
+#thanks .icon {
+	margin-right: 1em;
+	margin-bottom: 1em;
 }
 
 /* Footnotes */
 
+#footnotes {
+	margin-top: 4em;
+}
 #footnotes .content {
 	width: 54em;
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
 }
 #team-tools {
 	width: 10em;
-	margin-right: 2em;
 }
-#notes {
+#roles, #notes {
 	width: 20em;
+}
+#team-tools, #roles {
+	margin-right: 2em;
 }
 #footnotes h3 {
 	margin-bottom: .5em;
@@ -281,12 +327,14 @@ a {
 
 /* Recommendations */
 
+#recommendations {
+	margin-bottom: 4em;
+}
 #recommendations h3 {
 	width: 44em;
-	margin: 4em 0 1em 0;
+	margin-bottom: 1em;
 }
 #recommendations img {
 	width: 13em;
 	margin-right: .5em;
-	margin-bottom: 4em;
 }
